# pomo_pet

./: .coverage  .gitignore  CNAME  IMPROVEMENTS.md  LICENSE  Makefile  README.md  changelog.md  install.sh  instruction.md  package-lock.json  package.json  playwright.config.js  pomo_pet_app.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml  sync-homebrew.yml
Formula/: pomo-pet.rb
docs/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
pets/avacado/: pet.json
scripts/: audit_pwa.py
src/: __init__.py  __main__.py  cli.py  messages.py  pet_loader.py  pet_renderer.py  pet_window.py  timer.py
src/core/: __init__.py  config.py  messages.py  stats.py  timer.py
src/pets/: __init__.py  loader.py  models.py  renderer.py
src/ui/: __init__.py  ascii_renderer.py  notifications.py  sounds.py  theme.py  tray.py  window.py
tests/: test_ascii_renderer.py  test_cli.py  test_config.py  test_integration.py  test_messages.py  test_pet_loader.py  test_pet_renderer.py  test_pet_window.py  test_stats.py  test_timer.py  test_web_pwa.py
web-tests/: pwa.spec.js
