[project]
name = "pomo-pet"
version = "1.0.0"
description = "A Pomodoro timer with cute digital pets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "pillow>=10.0",
    "pyobjc-framework-cocoa>=12.1",
    "pyside6>=6.11.0",
]

[project.scripts]
pomo-pet = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
